FIX: gap between username and subscribe buttons in Top Models page and search page

--- a/src/styles/_users.scss
+++ b/src/styles/_users.scss
@@ -260,7 +260,7 @@
     align-content: flex-end;
     border-bottom: none;
     padding: 0;
-    margin: -5px 0 0;
+    margin: -5px 0 0 15px;
 
     @include media-breakpoint-up($desktop-breakpoint) {
       justify-content: space-between;
